Bug 473099 - 6ea5ae9c0f37daedbf1573cf0733ced19745710e regression in consecutive Alt+Shift+Tab
Summary: 6ea5ae9c0f37daedbf1573cf0733ced19745710e regression in consecutive Alt+Shift+Tab
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: 5.27.7
Platform: openSUSE Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-08-07 10:45 UTC by raffarti
Modified: 2023-08-11 13:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raffarti 2023-08-07 10:45:42 UTC
SUMMARY
Commit 6ea5ae9c0f37daedbf1573cf0733ced19745710e breaks Alt+Shift+Tab. Alt+Shift+Tab only works as 1st of the sequence, does not work for consecutive Tabs while keeping alt pressed. 


STEPS TO REPRODUCE
1. Press Alt+Shift+Tab
2. Release Tab (keep Alt+Shift down)
3. Press Tab again
    BUG: nothing happens

1. Press Alt+Tab
2. Release Tab (keep Tab down)
3. Press Shift then Tab
    BUG: nothing happens

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Active windows is changed in reverse order

SOFTWARE/OS VERSIONS
KWin version: Plasma/5.27 git branch
KDE/Qt from openSUSE kde unstable repositories
Comment 1 Zamundaaa 2023-08-07 12:48:36 UTC
Can confirm
Comment 2 Bug Janitor Service 2023-08-09 13:48:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4311
Comment 3 Zamundaaa 2023-08-11 13:36:05 UTC
Git commit 1ace5a4ceefc1e1319abfb4d883edce8758a7c36 by Xaver Hugl.
Committed on 11/08/2023 at 15:28.
Pushed by zamundaaa into branch 'master'.

input: add special handling for tabbox modifiers

modifiersRelevantForTabBox handles modifiers being consumed, which is wrong for the
tabbox; all it needs is to ignore capslock. To ensure that happens, this commit adds
a separate method for modifiers relevant for the tabbox.

M  +1    -1    src/input.cpp
M  +11   -0    src/input_event.h
M  +1    -0    src/keyboard_input.cpp
M  +21   -0    src/xkb.cpp
M  +1    -0    src/xkb.h

https://invent.kde.org/plasma/kwin/-/commit/1ace5a4ceefc1e1319abfb4d883edce8758a7c36
Comment 4 Zamundaaa 2023-08-11 13:55:39 UTC
Git commit 98bdba20ffa38f1d7c132afb8fdfe2cf68d7f31a by Xaver Hugl.
Committed on 11/08/2023 at 15:44.
Pushed by zamundaaa into branch 'Plasma/5.27'.

input: add special handling for tabbox modifiers

modifiersRelevantForTabBox handles modifiers being consumed, which is wrong for the
tabbox; all it needs is to ignore capslock. To ensure that happens, this commit adds
a separate method for modifiers relevant for the tabbox.


(cherry picked from commit 1ace5a4ceefc1e1319abfb4d883edce8758a7c36)

M  +1    -1    src/input.cpp
M  +11   -0    src/input_event.h
M  +1    -0    src/keyboard_input.cpp
M  +21   -0    src/xkb.cpp
M  +1    -0    src/xkb.h

https://invent.kde.org/plasma/kwin/-/commit/98bdba20ffa38f1d7c132afb8fdfe2cf68d7f31a