input: add special handling for tabbox modifiers

modifiersRelevantForTabBox handles modifiers being consumed, which is wrong for the
tabbox; all it needs is to ignore capslock. To ensure that happens, this commit adds
a separate method for modifiers relevant for the tabbox.

BUG: 473099


(cherry picked from commit 1ace5a4ceefc1e1319abfb4d883edce8758a7c36)